Fixed table alignment

--- a/css/call-for-papers.css
+++ b/css/call-for-papers.css
@@ -3,19 +3,20 @@
   margin: 0;
   box-sizing: border-box;
 }
-html{
+html {
   font-size: 16px;
 }
 
 img {
   max-width: 100%;
 }
+/*container for heading & button */
 .container-call-for-papers {
   display: grid;
   grid-template-columns: 3fr 1fr;
   margin: 3em 3em 0;
 }
-
+/*container for content*/
 .main-call-for-papers {
   margin: 0 3em 3em;
 }
@@ -26,20 +27,24 @@ img {
   line-height: 140%;
   margin-bottom: 1em;
 }
+
 .main-call-for-papers > p:nth-child(2) {
+  /* highlighted 2nd para*/
   font-weight: 700;
   background: none;
 }
 
 .table {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
   font-family: Lato, sans-serif;
   font-size: 1.2rem;
+  margin-left: 3em;
+  margin-right: 3em;
 }
 
 .table p {
-  padding: 0.5em 0 0.5em 0.5em;
+  padding: 0.8em 0 0.8em 0.8em;
 }
 
 .column1 > p:nth-child(odd) {
@@ -49,14 +54,15 @@ img {
 .column2 > p:nth-child(odd) {
   background: #eee;
 }
-.tracks{
+.tracks {
   color: #4c4c4c;
 }
 @media screen and (max-width: 768px) {
-  .container-call-for-papers{
+  .container-call-for-papers {
     display: block;
     margin-bottom: 2em;
   }
   .table {
     display: block;
-}}
+  }
+}
